# data-lake

./: .env.example  .env.production  .gitattributes  .gitignore  README.md  middleware.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.sh
app/: __init__.py  audit.py  audit_pg.py  auth.py  catalog.py  catalog_pg.py  config.py  dataset.py  iceberg_io.py  main.py  metrics.py  processing.py  query.py  schemas.py  storage.py  tasks.py
app/routers/: agent.py  health.py  ingest.py
docs/: NEW_DATASET_GUIDE.md  RPA_Data_to_AI_기술설계서_NoDocker.md  TEST_RESULTS.md  TEST_SCENARIOS.md  WINDOWS_TEST_GUIDE.md  초기요구사항.txt
sample_data/: generate_samples.py  production_2026-05-29.csv
scripts/win/: middleware.ps1  run.ps1  setup.ps1
tests/: test_api.py
