[project]
name = "rpa-agentlake"
version = "0.1.0"
description = "RPA Data-to-AI 통합 시스템 — 비동기 수집 + Iceberg 레이크 + 에이전트 서빙 Tool API"
requires-python = ">=3.9"
dependencies = [
    # 코어 API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    # 테이블 포맷 / 쿼리 엔진 (Iceberg + PyArrow + DuckDB)
    "pyiceberg[sql-postgres]>=0.10",
    "pyarrow>=15",
    "duckdb>=0.10",
    # 미들웨어 클라이언트 (env 로 활성화)
    "minio>=7.2",           # STORAGE_BACKEND=minio
    "celery>=5.3",          # TASK_BACKEND=celery
    "redis>=5.0",
    "psycopg[binary]>=3.1", # CATALOG_BACKEND=postgres (audit)
    "psycopg-pool>=3.2",
]

[dependency-groups]
# uv sync 시 기본 포함. 운영만 설치하려면: uv sync --no-dev
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "openpyxl>=3.1",   # sample_data/generate_samples.py
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.uv]
package = false
